Reduced footer link margin to prevent wrapping to a new line

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -91,7 +91,7 @@ html
     font-size: 12px
     color: #aaaaaa
     a
-      margin-left: 40px
+      margin-left: 20px
       &:hover
         color: #777
         text-decoration: none
